package es.uniovi.dlp.ast;

public interface Statement extends ASTNode {}
