@startuml Statements
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

interface Statement

abstract AbstractStatement

class If {
    condition: Expression
    ifBody: List<Statement>
    elseBody: List<Statement>
}

class Assignment {
    leftExpression: Expression
    rightExpression: Expression
    ' Deben de poder ser evaluables
}

class Write {
    expresion: Expression
}

class Read {
    expresion: Expression
}

class While {
    condition: Expression
    body: List<Statement>
}

class Return {
    returnExpresion: Expression
}

class Invocation {
    argumentos: List<Statement>
}

ASTNode <|-- Statement
Statement <|.. AbstractStatement
AbstractStatement <|.. If
AbstractStatement <|.. Assignment
AbstractStatement <|.. Write
AbstractStatement <|.. Read
AbstractStatement <|.. While
AbstractStatement <|.. Return
AbstractStatement <|.. Invocation
If o-- "1" Expression
Write o-- "1" Expression
Read o-- "1" Expression
While o-- "1" Expression
While "0..*" o-- Statement
Return o-- "1" Expression
Assignment o-- "2" Expression
If o-- "0..n" Statement
Invocation "0..*" o-- Statement

@enduml
